--- a/imroz/assets/css/index.css
+++ b/imroz/assets/css/index.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
-/* Base style */
 body{
   margin: 0px;
   font-family: 'Poppins', sans-serif;
@@ -17,8 +16,8 @@ ul {
   list-style: none;
 }
 a {
-  text-decoration: none !important;
-  outline: none !important;
+  text-decoration: none;
+  outline: none;
   -webkit-transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
   -ms-transition: all .3s ease-in-out;
@@ -35,7 +34,7 @@ a:hover {
   box-shadow: 0 0 0 0.2rem rgba(255, 193, 7, 0);
 }
 button:focus {
-  box-shadow: none !important;
+  box-shadow: none;
 }
 button:not(.collapsed){
   background-color: transparent;
@@ -46,7 +45,7 @@ button:not(.collapsed){
 }
 
 .flex {
-  display: flex !important;
+  display: flex;
 }
 
 nav {
@@ -114,9 +113,9 @@ nav ul li a {
 .gradient-text {
   background: linear-gradient(
     120deg,
-    #1c99fe 20.69%,
-    #7644ff 50.19%,
-    #fd4766 79.69%
+    #1c99fe 20%,
+    #7644ff 50%,
+    #fd4766 79%
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -195,7 +194,7 @@ nav ul li a {
 
 .row-7 {
   flex: 0 0 auto;
-  width: 58.33333333%;
+  width: 58%;
 }
 
 .parellel {
@@ -391,7 +390,7 @@ nav ul li a {
   }
   
   .footer__addr {
-    margin-right: 1.25em;
+    margin-right: 1em;
     margin-bottom: 2em;
   }
   
@@ -403,7 +402,7 @@ nav ul li a {
   }
   
   .footer__addr h2 {
-    margin-top: 1.3em;
+    margin-top: 1em;
     font-size: 15px;
     font-weight: 400;
   }
@@ -453,7 +452,7 @@ nav ul li a {
   
   .footer__nav > * {
     flex: 1 50%;
-    margin-right: 1.25em;
+    margin-right: 1em;
   }
   
   .nav__ul a {
@@ -462,7 +461,7 @@ nav ul li a {
   
   .nav__ul--extra {
     column-count: 2;
-    column-gap: 1.25em;
+    column-gap: 1em;
   }
   
   .legal {
@@ -480,13 +479,13 @@ nav ul li a {
     color: #999;
   }
 
-  @media screen and (min-width: 24.375em) {
+  @media screen and (min-width: 24em) {
     .legal .legal__links {
       margin-left: auto;
     }
   }
   
-  @media screen and (min-width: 40.375em) {
+  @media screen and (min-width: 40em) {
     .footer__nav > * {
       flex: 1;
     }
